# RadetSim

./: CMakeLists.txt  DetectorTemplate.cc  LICENSE  README.md  RadetSim.cc  submit_job_slurm.sh
analysis/: CMakeLists.txt  EnergyDepVSIntialEnergy.cpp  Makefile  PlotSpectra.cpp  ProcessTrack.cpp  RockSpecAnalyzer.cpp
analysis/cmake/: CMakeLists.txt  Makefile  RockSpecAnalyzer.cc  cmake_install.cmake
analysis/include/: CommandlineHandler.h  MCPulse.h  MCPulseArray.h  MacroHandler.h  StepInfo.h  TrackReader.h
analysis/src/: CommandlineHandler.cpp  MCPulse.cpp  MCPulseArray.cpp  MacroHandler.cpp  TrackReader.cpp
analysis/test/: testPulse.cpp  testPulseArray.cpp
include/: ConfigParser.h  ConfigParser.hh  EventAction.hh  FarsideDetector.hh  FarsideDetectorMessenger.hh  GeneratorAction.hh  GeneratorMessenger.hh  GeometryConstruction.hh  GeometryConstructionMessenger.hh  GeometryManager.hh  NaIDetector.hh  RunAction.hh  RunActionMessenger.hh  SimpleCube.hh  SimpleCubeMessenger.hh  StackingAction.hh  StepInfo.hh  SteppingAction.hh  TrackingAction.hh  utility.hh
macros/: NaI_rock_K40.mac  NaI_rock_Th232.mac  NaI_rock_U238.mac  rock_Co60.mac  rock_K40.mac  rock_Th232.mac  rock_U238.mac  test.mac  vis.mac
src/: ConfigParser.cc  ConfigParser.cpp  EventAction.cc  FarsideDetector.cc  FarsideDetectorMessenger.cc  GeneratorAction.cc  GeneratorMessenger.cc  GeometryConstruction.cc  GeometryConstructionMessenger.cc  GeometryManager.cc  NaIDetector.cc  RunAction.cc  RunActionMessenger.cc  SimpleCube.cc  SimpleCubeMessenger.cc  StackingAction.cc  StepInfo.cc  SteppingAction.cc  TrackingAction.cc  utility.cc
study/crystal/: ProcessTrack.py  README.md  crystal.cfg  crystal.py  plot_r_vs_E.py  submit_crystal.py
study/kamioka/: kamioka.py  submit.py
